--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruohan's Portfolio</title>
     <!--link the css style sheet here-->
-    <link rel="sheetstyle" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     
 </head>
 <body>
@@ -23,7 +23,7 @@
                     <a href="#works">Work</a>
                 </li>
                 <li>
-                    <a href="#say-hi"> Say Hi</a>
+                    <a href="#find-me">Find Me</a>
                 </li>
             </ul>
         </nav>
@@ -32,22 +32,28 @@
     <!--Intro section starts here-->
     <section class="bio" id="about">
         <h2 class="section-title">About</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        <p class="flex-right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat! 
+            <br><br>
+            seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
+            messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
+            Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
+            tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
+            probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
         </p>
     </section>
     <!--Intro section ends here-->
     <!--My Works section starts here-->
     <section class="works" id="works">
         <h2 class="section-title">Work</h2>
-        <div class="work-grid-wrapper">          
+        <div class="work-grid-wrapper flex-right">          
         </div>
     </section>
     <!--My Works sections ends here-->
     <!--Say Hi section starts here-->
-    <section class="contact" id="say-hi">
+    <section class="contact" id="find-me">
         <h2 class="section-title">Find Me</h2>
-        <address class="contact-info">
+        <address class="contact-info flex-right">
             <a href="tel:+1555555555">555.555.5555</a>
             <a href="mailto:ruohanw89@gmail.com"> ruohanw89@gmail.com </a>
             <a href="https://github.com/rhw-git">GitHub</a>
@@ -57,9 +63,6 @@
     <!--Say Hi section ends here-->
     <!--footer starts here-->
     <footer>
-        <p>
-           Made with ❤️ by Ruohan.
-        <p>
     </footer>
     <!--footer endss here-->
 </body>
