added style and CSS grid for the work section

--- a/index.html
+++ b/index.html
@@ -46,8 +46,59 @@
     <!--My Works section starts here-->
     <section class="works" id="works">
         <h2 class="section-title">Work</h2>
-        <div class="work-grid-wrapper flex-right">          
-        </div>
+        <div class="work-grid-wrapper">
+            <div class="work-grid-container flex-right">
+                <article class="work-grid-item project-1">
+                    <a href="https://rhw-git.github.io/run-buddy/" target="blank">
+                        <iframe src="https://rhw-git.github.io/run-buddy/" scrolling="no" frameborder="0"></iframe>
+                    </a>
+                    <div>
+                        <h3 class="project-name">Run Body</h3>
+                        <p class="languages">Html/CSS</p>
+                    </div>
+                </article>
+                <article class="work-grid-item project-2">
+                    <!--placeholder link for future project-->
+                    <a href="" target="blank">
+                        <img src="./assets/porject-2.svg" alt="placeholder image for furture project 2">
+                    </a>
+                    <div>
+                        <h3 class="project-name">LED Wall</h3>
+                        <p class="languages">Node/IoT</p>
+                    </div>
+                </article>
+                <article class="work-grid-item project-3">
+                    <!--placeholder link for future project-->
+                    <a href="" target="blank">
+                        <img src="./assets/project-3.svg" alt="placeholder image for furture project 3">
+                    </a>
+                    <div>
+                        <h3 class="project-name">Calculator</h3>
+                        <p class="languages">React/JavaScript/CSS</p>
+                    </div>             
+                </article>
+                <article class="work-grid-item project-4">
+                    <!--placeholder link for future project-->
+                    <a href="" target="blank">
+                        <img src="./assets/project-4.svg" alt="placeholder image for furture project 4">
+                    </a>      
+                    <div>
+                        <h3 class="project-name">Pastel Puzzels</h3>
+                        <p class="languages">MERN Stack</p>
+                    </div>     
+                </article>  
+                <article class="work-grid-item project-5">
+                    <!--placeholder link for future project-->
+                    <a href="" target="blank">
+                        <img src="./assets/project-5.svg" alt="placeholder image for furture project 5">
+                    </a>
+                    <div>
+                        <h3 class="project-name">Surf Report</h3>
+                        <p class="languages">MERN Stack</p>
+                    </div>   
+                </article>            
+            </div>
+        </div>    
     </section>
     <!--My Works sections ends here-->
     <!--Say Hi section starts here-->
