add the hero img

--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
         </nav>
     </header>
     <!--hearder ends here-->
+    <section class="hero">
+        <div class="gradient"></div>
+        <div class="hero-content">
+            <img src="./assets/photo.png" alt="recent photo" />
+            <h2>Hello Everyone, Welcome to my portfolio page!</h2>
+        </div>
+    </section>
     <!--Intro section starts here-->
     <section class="bio" id="about">
         <h2 class="section-title">About</h2>
+
         <p class="flex-right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
             itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat! 
             <br><br>
