responsive for tablet screen size

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <div class="gradient"></div>
         <div class="hero-content">
             <img src="./assets/photo.png" alt="recent photo" />
-            <h2>Hello Everyone, Welcome to my portfolio page!</h2>
+            <h2>Hello Everyone,
+            <span>Welcome to</span> 
+            my portfolio page!</h2>
         </div>
     </section>
     <!--Intro section starts here-->
@@ -111,12 +113,14 @@
     <!--Say Hi section starts here-->
     <section class="contact" id="find-me">
         <h2 class="section-title">Find Me</h2>
-        <address class="contact-info flex-right">
-            <a href="tel:+1555555555">555.555.5555</a>
-            <a href="mailto:ruohanw89@gmail.com"> ruohanw89@gmail.com </a>
-            <a href="https://github.com/rhw-git">GitHub</a>
-            <a href="https://www.linkedin.com/in/ruohan-wang-78990590/">Linkin</a>
-        </address>
+        <div class="contact-info-wrapper flex-right">
+            <address class="contact-info">
+                <a href="tel:+1555555555">Cell</a>
+                <a href="mailto:ruohanw89@gmail.com"> Email</a>
+                <a href="https://github.com/rhw-git">GitHub</a>
+                <a href="https://www.linkedin.com/in/ruohan-wang-78990590/">Linkin</a>
+            </address>
+        </div>
     </section>
     <!--Say Hi section ends here-->
     <!--footer starts here-->
