responsive design for smallest screen size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="./assets/photo.png" alt="recent photo" />
             <h2>Hello Everyone,
             <span>Welcome to</span> 
-            my portfolio page!</h2>
+            <span> my portfolio page!</span> </h2>
         </div>
     </section>
     <!--Intro section starts here-->
