add a blocker item infront of the iframe to make it a clickable link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
             <div class="work-grid-container flex-right">
                 <article class="work-grid-item project-1">
                     <a href="https://rhw-git.github.io/run-buddy/" target="blank">
-                        <iframe src="https://rhw-git.github.io/run-buddy/" scrolling="no" frameborder="0"></iframe>
+                        <div class="blocker"></div>
+                        <iframe src="https://rhw-git.github.io/run-buddy/" scrolling="no" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
                     </a>
                     <div>
                         <h3 class="project-name">Run Body</h3>
