--- a/index.html
+++ b/index.html
@@ -1,132 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ruohan's Portfolio</title>
     <!--link the css style sheet here-->
     <link rel="stylesheet" href="./assets/style.css" />
-</head>
-<body>
+  </head>
+  <body>
     <!--hearder starts here-->
     <header>
-        <!--branding-->
-        <h1>Ruohan's Portfolio</h1>
-        <!--navigation-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#works">Work</a>
-                </li>
-                <li>
-                    <a href="#find-me">Find Me</a>
-                </li>
-            </ul>
-        </nav>
+      <!--branding-->
+      <h1>Ruohan's Portfolio</h1>
+      <!--navigation-->
+      <nav>
+        <ul>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#works">Work</a>
+          </li>
+          <li>
+            <a href="#find-me">Find Me</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <!--hearder ends here-->
     <section class="hero">
-        <div class="gradient"></div>
-        <div class="hero-content">
-            <img src="./assets/photo.png" alt="recent photo" />
-            <h2>Hello Everyone,
-            <span>Welcome to</span> 
-            <span> my portfolio page!</span> </h2>
-        </div>
+      <div class="gradient"></div>
+      <div class="hero-content">
+        <img src="./assets/photo.png" alt="recent photo" />
+        <h2>
+          Hello Everyone,
+          <span>Welcome to</span>
+          <span> my portfolio page!</span>
+        </h2>
+      </div>
     </section>
     <!--Intro section starts here-->
     <section class="bio" id="about">
-        <h2 class="section-title">About</h2>
+      <h2 class="section-title">About</h2>
 
-        <p class="flex-right">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-            itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat! 
-            <br><br>
-            seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
-            messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
-            Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche
-            tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you
-            probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
-        </p>
+      <p class="flex-right">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque
+        animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio
+        dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis
+        repellat! <br /><br />
+        seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion
+        axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz
+        plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund
+        Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy
+        chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore
+        Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa
+        you probably haven't heard of them yr banh mi asymmetrical art party
+        selvage letterpress High Life.
+      </p>
     </section>
     <!--Intro section ends here-->
     <!--My Works section starts here-->
     <section class="works" id="works">
-        <h2 class="section-title">Work</h2>
-        <div class="work-grid-wrapper">
-            <div class="work-grid-container flex-right">
-                <article class="work-grid-item project-1">
-                    <a href="https://rhw-git.github.io/run-buddy/" target="blank">
-                        <div class="blocker"></div>
-                        <iframe src="https://rhw-git.github.io/run-buddy/" scrolling="no" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
-                    </a>
-                    <div>
-                        <h3 class="project-name">Run Body</h3>
-                        <p class="languages">Html/CSS</p>
-                    </div>
-                </article>
-                <article class="work-grid-item project-2">
-                    <!--placeholder link for future project-->
-                    <a href="" target="blank">
-                        <img src="./assets/porject-2.svg" alt="placeholder image for furture project 2">
-                    </a>
-                    <div>
-                        <h3 class="project-name">LED Wall</h3>
-                        <p class="languages">Node/IoT</p>
-                    </div>
-                </article>
-                <article class="work-grid-item project-3">
-                    <!--placeholder link for future project-->
-                    <a href="" target="blank">
-                        <img src="./assets/project-3.svg" alt="placeholder image for furture project 3">
-                    </a>
-                    <div>
-                        <h3 class="project-name">Calculator</h3>
-                        <p class="languages">React/JavaScript/CSS</p>
-                    </div>             
-                </article>
-                <article class="work-grid-item project-4">
-                    <!--placeholder link for future project-->
-                    <a href="" target="blank">
-                        <img src="./assets/project-4.svg" alt="placeholder image for furture project 4">
-                    </a>      
-                    <div>
-                        <h3 class="project-name">Pastel Puzzels</h3>
-                        <p class="languages">MERN Stack</p>
-                    </div>     
-                </article>  
-                <article class="work-grid-item project-5">
-                    <!--placeholder link for future project-->
-                    <a href="" target="blank">
-                        <img src="./assets/project-5.svg" alt="placeholder image for furture project 5">
-                    </a>
-                    <div>
-                        <h3 class="project-name">Surf Report</h3>
-                        <p class="languages">MERN Stack</p>
-                    </div>   
-                </article>            
+      <h2 class="section-title">Work</h2>
+      <div class="work-grid-wrapper">
+        <div class="work-grid-container flex-right">
+          <article class="work-grid-item project-1">
+            <a href="https://rhw-git.github.io/run-buddy/" target="blank">
+              <div class="blocker"></div>
+              <iframe
+                src="https://rhw-git.github.io/run-buddy/"
+                scrolling="no"
+                frameborder="0"
+                allowfullscreen="allowfullscreen"
+              ></iframe>
+            </a>
+            <div>
+              <h3 class="project-name">Run Body</h3>
+              <p class="languages">Html/CSS</p>
             </div>
-        </div>    
+          </article>
+          <article class="work-grid-item project-2">
+            <!--add group project 1 here-->
+            <a href="https://covid-19-data-data.herokuapp.com/" target="blank">
+              <div class="blocker"></div>
+              <iframe
+                src="https://covid-19-data-data.herokuapp.com/"
+                scrolling="no"
+                frameborder="0"
+                allowfullscreen="allowfullscreen"
+              ></iframe>
+            </a>
+            <div>
+              <h3 class="project-name">COVID-19 Data</h3>
+              <p class="languages">Node/javaScript/Html</p>
+            </div>
+          </article>
+          <article class="work-grid-item project-3">
+            <!--placeholder link for future project-->
+            <a href="" target="blank">
+              <img
+                src="./assets/project-3.svg"
+                alt="placeholder image for furture project 3"
+              />
+            </a>
+            <div>
+              <h3 class="project-name">Calculator</h3>
+              <p class="languages">React/JavaScript/CSS</p>
+            </div>
+          </article>
+          <article class="work-grid-item project-4">
+            <!--placeholder link for future project-->
+            <a href="" target="blank">
+              <img
+                src="./assets/project-4.svg"
+                alt="placeholder image for furture project 4"
+              />
+            </a>
+            <div>
+              <h3 class="project-name">Pastel Puzzels</h3>
+              <p class="languages">MERN Stack</p>
+            </div>
+          </article>
+          <article class="work-grid-item project-5">
+            <!--placeholder link for future project-->
+            <a href="" target="blank">
+              <img
+                src="./assets/project-5.svg"
+                alt="placeholder image for furture project 5"
+              />
+            </a>
+            <div>
+              <h3 class="project-name">Surf Report</h3>
+              <p class="languages">MERN Stack</p>
+            </div>
+          </article>
+        </div>
+      </div>
     </section>
     <!--My Works sections ends here-->
     <!--Say Hi section starts here-->
     <section class="contact" id="find-me">
-        <h2 class="section-title">Find Me</h2>
-        <div class="contact-info-wrapper flex-right">
-            <address class="contact-info">
-                <a href="tel:+1555555555">Cell</a>
-                <a href="mailto:ruohanw89@gmail.com"> Email</a>
-                <a href="https://github.com/rhw-git">GitHub</a>
-                <a href="https://www.linkedin.com/in/ruohan-wang-78990590/">Linkin</a>
-            </address>
-        </div>
+      <h2 class="section-title">Find Me</h2>
+      <div class="contact-info-wrapper flex-right">
+        <address class="contact-info">
+          <a href="tel:+1555555555">Cell</a>
+          <a href="mailto:ruohanw89@gmail.com"> Email</a>
+          <a href="https://github.com/rhw-git">GitHub</a>
+          <a href="https://www.linkedin.com/in/ruohan-wang-78990590/">Linkin</a>
+        </address>
+      </div>
     </section>
     <!--Say Hi section ends here-->
     <!--footer starts here-->
-    <footer>
-    </footer>
+    <footer></footer>
     <!--footer endss here-->
-</body>
+  </body>
 </html>
