add group project 2

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
             </div>
           </article>
           <article class="work-grid-item project-3">
-            <!--placeholder link for future project-->
-            <a href="" target="blank">
+            <!--add group project 2 here-->
+            <a href="http://cosmopolitan-tastes.herokuapp.com/" target="blank">
               <img
-                src="./assets/project-3.svg"
-                alt="placeholder image for furture project 3"
+                src="./assets/project-3.png"
+                alt="placeholder image for furture project 4"
               />
             </a>
             <div>
-              <h3 class="project-name">Calculator</h3>
-              <p class="languages">React/JavaScript/CSS</p>
+              <h3 class="project-name">Cosmopolitan Tastes</h3>
+              <p class="languages">Node/JavaScript/CSS</p>
             </div>
           </article>
           <article class="work-grid-item project-4">
